NXBT: active gc logs by default